start work on new russian analyser

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 * text=auto !eol
+/apertium-rus.rus.dix -text
 dev/adjectives_zaliznjak.txt -text
+dev/stem-list.txt -text svneol=unset#application/octet-stream
