--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,6 @@
 * text=auto !eol
+/Makefile -text
+/apertium-rus.rus.acx -text
 /apertium-rus.rus.dix -text
 dev/adjectives_zaliznjak.txt -text
 dev/stem-list.txt -text svneol=unset#application/octet-stream
