--- a/.gitattributes
+++ b/.gitattributes
@@ -3,5 +3,6 @@
 /apertium-rus.rus.acx -text
 /apertium-rus.rus.dix -text
 dev/adjectives_zaliznjak.txt -text
+dev/dump.txt -text
 dev/stem-list.txt -text svneol=unset#application/octet-stream
 /spellrelax.xsl -text
