--- a/.gitattributes
+++ b/.gitattributes
@@ -5,4 +5,5 @@
 dev/adjectives_zaliznjak.txt -text
 dev/dump.txt -text
 dev/stem-list.txt -text svneol=unset#application/octet-stream
+dev/syn_sem_RUS.txt -text
 /spellrelax.xsl -text
