--- a/.gitattributes
+++ b/.gitattributes
@@ -1,10 +1,17 @@
 * text=auto !eol
+/AUTHORS -text
+/COPYING -text
+/ChangeLog -text
 /Makefile -text
+/NEWS -text
+/README -text
+/apertium-rus.post-rus.dix -text
 /apertium-rus.rus.acx -text
 /apertium-rus.rus.dix -text
 dev/MiPListAlpha.csv -text
 dev/adjectives_zaliznjak.txt -text
 dev/dump.txt -text
+dev/questions.txt -text
 dev/stem-list.txt -text svneol=unset#application/octet-stream
 dev/syn_sem_RUS.txt -text
 /spellrelax.xsl -text
