--- a/.gitattributes
+++ b/.gitattributes
@@ -15,4 +15,7 @@ dev/dump.txt -text
 dev/questions.txt -text
 dev/stem-list.txt -text svneol=unset#application/octet-stream
 dev/syn_sem_RUS.txt -text
+dev/text1.txt -text svneol=unset#application/octet-stream
+dev/text1.verbs -text
+dev/verbs-z.txt -text
 /spellrelax.xsl -text
