mv apertium-foo-0.1.pc.in apertium-foo.pc.in;
now dependents say PKG_CHECK_MODULES([APERTIUM_FOO], [apertium-foo >= 0.1]) 
instead of checking each apertium-foo-0.1, apertium-foo-0.2, etc.

--- a/Makefile.am
+++ b/Makefile.am
@@ -62,7 +62,7 @@ apertium_rus_DATA=$(LANG1).automorf.bin $(LANG1).autogen.bin $(LANG1).autopgen.b
 		    $(LANG1).rlx.bin modes
 
 pkgconfigdir = $(libdir)/pkgconfig
-pkgconfig_DATA = $(BASENAME)-$(RELEASE).pc
+pkgconfig_DATA = $(BASENAME).pc
 
 install-data-local:
 	if [ ! -d $(DESTDIR)$(apertium_rus_srcdir) ]; then mkdir -p $(DESTDIR)$(apertium_rus_srcdir); fi
