--- a/.gitattributes
+++ b/.gitattributes
@@ -5,7 +5,7 @@
 /Makefile.am -text
 /NEWS -text
 /README -text
-/apertium-rus-0.1.pc.in -text
+/apertium-rus.pc.in -text
 /apertium-rus.post-rus.dix -text
 /apertium-rus.rus.acx -text
 /apertium-rus.rus.dix -text
