--- a/apertium-rus.pc.in
+++ b/apertium-rus.pc.in
@@ -1,6 +1,8 @@
 prefix=@prefix@
 exec_prefix=${prefix}
 libdir=@libdir@
+dir=@libdir@/apertium/apertium-rus
+srcdir=@datarootdir@/apertium/apertium-rus
 
 Name: apertium-rus
 Description: Finite-state morphological transducer and constraint grammar for Russian 
