fix mode building, add EXTRA_DIST goals for tarballing
also, modes.xml for tuk and fix dix-build for hbs

--- a/Makefile.am
+++ b/Makefile.am
@@ -9,7 +9,7 @@ BASENAME=apertium-$(LANG1)
 
 TARGETS_COMMON = $(LANG1).automorf.bin $(LANG1).autogen.bin $(LANG1).autopgen.bin \
 	$(LANG1).automorf.att.gz $(LANG2).autogen.att.gz \
-        $(LANG1).rlx.bin modes
+        $(LANG1).rlx.bin
 
 ###############################################################################
 ## Russian transducer
@@ -43,30 +43,46 @@ $(LANG1).rlx.bin: $(BASENAME).$(LANG1).rlx
 	cg-comp $< $@
 
 ###############################################################################
+## Distribution
+###############################################################################
+EXTRA_DIST=$(BASENAME).$(LANG1).dix \
+	   $(BASENAME).post-$(LANG1).dix \
+	   $(BASENAME).$(LANG1).acx \
+	   $(BASENAME).$(LANG1).rlx \
+	   $(LANG1).prob \
+	   spellrelax.xsl \
+	   modes.xml
+
+###############################################################################
 ## Installation stuff
 ###############################################################################
 #
 #   apertium_rus_libdir: This is where the compiled binaries go
 #   apertium_rus_srcdir: This is where the source files go
 
-modes: modes.xml
-	apertium-gen-modes modes.xml
-
 apertium_rusdir=$(prefix)/lib/apertium/$(BASENAME)/
 apertium_rus_srcdir=$(prefix)/share/apertium/$(BASENAME)/
 
-EXTRA_DIST=spellrelax.xsl
-
 apertium_rus_DATA=$(LANG1).automorf.bin $(LANG1).autogen.bin $(LANG1).autopgen.bin \
 		    $(LANG1).automorf.att.gz $(LANG1).autogen.att.gz \
-		    $(LANG1).rlx.bin modes
+		    $(LANG1).rlx.bin
 
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = $(BASENAME).pc
 
+# Modes are not installed since they're all just "debug modes". All
+# modes are created by this goal.
+modes/$(LANG1)-morph.mode: modes.xml
+	apertium-validate-modes modes.xml
+	apertium-gen-modes modes.xml
+
+noinst_DATA=modes/$(LANG1)-morph.mode
+
 install-data-local:
-	if [ ! -d $(DESTDIR)$(apertium_rus_srcdir) ]; then mkdir -p $(DESTDIR)$(apertium_rus_srcdir); fi
+	test -d $(DESTDIR)$(apertium_rus_srcdir) || mkdir -p $(DESTDIR)$(apertium_rus_srcdir)
 	$(INSTALL_DATA) $(BASENAME).$(LANG1).dix $(DESTDIR)$(apertium_rus_srcdir)
 	$(INSTALL_DATA) $(BASENAME).$(LANG1).rlx $(DESTDIR)$(apertium_rus_srcdir)
 
-CLEANFILES = -r $(TARGETS_COMMON) .deps/
+CLEANFILES = $(TARGETS_COMMON)
+clean-local:
+	-rm -rf .deps modes
