--- a/Makefile.am
+++ b/Makefile.am
@@ -63,9 +63,7 @@ EXTRA_DIST=$(BASENAME).$(LANG1).dix \
 apertium_rusdir=$(prefix)/lib/apertium/$(BASENAME)/
 apertium_rus_srcdir=$(prefix)/share/apertium/$(BASENAME)/
 
-apertium_rus_DATA=$(LANG1).automorf.bin $(LANG1).autogen.bin $(LANG1).autopgen.bin \
-		    $(LANG1).automorf.att.gz $(LANG1).autogen.att.gz \
-		    $(LANG1).rlx.bin
+apertium_rus_DATA=$(TARGETS_COMMON)
 
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = $(BASENAME).pc
