--- a/.gitattributes
+++ b/.gitattributes
@@ -23,4 +23,5 @@ dev/text1.txt -text svneol=unset#application/octet-stream
 dev/text1.verbs -text
 dev/verbs-z.txt -text
 /modes.xml -text
+/rus.prob -text
 /spellrelax.xsl -text
