--- a/Makefile.am
+++ b/Makefile.am
@@ -9,6 +9,7 @@ BASENAME=apertium-$(LANG1)
 
 TARGETS_COMMON = $(LANG1).automorf.bin $(LANG1).autogen.bin $(LANG1).autopgen.bin \
 	$(LANG1).automorf.att.gz $(LANG1).autogen.att.gz \
+        $(LANG1).prob \
         $(LANG1).rlx.bin
 
 # Use this goal for creating .deps, otherwise make -j2 will give problems:
