--- a/.gitattributes
+++ b/.gitattributes
@@ -8,15 +8,16 @@
 /apertium-rus.pc.in -text
 /apertium-rus.post-rus.dix -text
 /apertium-rus.rus.acx -text
-/apertium-rus.rus.dix -text
 /apertium-rus.rus.rlx -text
 /autogen.sh -text
 /configure.ac -text
 dev/MiPListAlpha.csv -text
 dev/adjectives_zaliznjak.txt -text
+dev/apertium-rus.rus.dix.withstress -text
 dev/deaccent.pl -text
 dev/dump.txt -text
 dev/questions.txt -text
+dev/spellrelax.xsl -text
 dev/stem-list.txt -text svneol=unset#application/octet-stream
 dev/syn_sem_RUS.txt -text
 dev/text1.txt -text svneol=unset#application/octet-stream
@@ -24,4 +25,3 @@ dev/text1.verbs -text
 dev/verbs-z.txt -text
 /modes.xml -text
 /rus.prob -text
-/spellrelax.xsl -text
