--- a/.gitattributes
+++ b/.gitattributes
@@ -14,6 +14,9 @@
 /configure.ac -text
 dev/MiPListAlpha.csv -text
 dev/adjectives_zaliznjak.txt -text
+dev/apertium-rus.post-rus.dix -text
+dev/apertium-rus.rus.acx -text
+dev/apertium-rus.rus.dix -text
 dev/apertium-rus.rus.dix.withstress -text
 dev/deaccent.pl -text
 dev/dump.txt -text
