--- a/.gitattributes
+++ b/.gitattributes
@@ -31,3 +31,6 @@ dev/text1.verbs -text
 dev/verbs-z.txt -text
 /modes.xml -text
 /rus.prob -text
+texts/murmansk.ana.txt -text
+texts/murmansk.raw.txt -text svneol=unset#application/octet-stream
+texts/murmansk.tok.txt -text svneol=unset#application/octet-stream
