add rwanda text

--- a/.gitattributes
+++ b/.gitattributes
@@ -35,4 +35,6 @@ texts/murmansk.ana.txt -text
 texts/murmansk.log.txt -text
 texts/murmansk.raw.txt -text svneol=unset#application/octet-stream
 texts/murmansk.tok.txt -text svneol=unset#application/octet-stream
+texts/rwanda.ana.txt -text
+texts/rwanda.log.txt -text
 texts/update-log.sh -text
