require 3.3.0 since it uses 3.3.0 features; use AP_MKINCLUDE for shorter makefiles

--- a/Makefile.am
+++ b/Makefile.am
@@ -75,6 +75,10 @@ install-data-local:
 	$(INSTALL_DATA) $(BASENAME).$(LANG1).dix $(DESTDIR)$(apertium_rus_srcdir)
 	$(INSTALL_DATA) $(BASENAME).$(LANG1).rlx $(DESTDIR)$(apertium_rus_srcdir)
 
+###############################################################################
+## Cleanup
+###############################################################################
+
 CLEANFILES = $(TARGETS_COMMON)
 clean-local:
 	-rm -rf .deps modes
