--- a/.gitattributes
+++ b/.gitattributes
@@ -31,8 +31,13 @@ dev/syn_sem_RUS.txt -text
 dev/text1.txt -text svneol=unset#application/octet-stream
 dev/text1.verbs -text
 dev/verbs-z.txt -text
+expanded/README -text
+expanded/current-state.txt.gz -text svneol=unset#unset
+expanded/previous-state.txt.gz -text svneol=unset#unset
 /modes.xml -text
+/qa.sh -text
 /rus.prob -text
+tests/rus.test -text
 texts/cyprus.ana.txt -text
 texts/cyprus.log.txt -text
 texts/murmansk.ana.txt -text
