--- a/.gitattributes
+++ b/.gitattributes
@@ -46,4 +46,6 @@ texts/murmansk.raw.txt -text svneol=unset#application/octet-stream
 texts/murmansk.tok.txt -text svneol=unset#application/octet-stream
 texts/rwanda.ana.txt -text
 texts/rwanda.log.txt -text
+texts/son-smešnogo-čeloveka.ana.txt -text
+texts/son-smešnogo-čeloveka.log.txt -text
 texts/update-log.sh -text
