--- a/.gitattributes
+++ b/.gitattributes
@@ -30,6 +30,8 @@ dev/stem-list.txt -text svneol=unset#application/octet-stream
 dev/syn_sem_RUS.txt -text
 dev/text1.txt -text svneol=unset#application/octet-stream
 dev/text1.verbs -text
+dev/to_add.txt -text
+dev/to_check.txt -text
 dev/verbs-z.txt -text
 expanded/README -text
 expanded/current-state.txt.gz -text svneol=unset#unset
