Put .pc and compiled data in /share/, not /lib/ (following Debian/autotools standards)
pkgconfigdir=$(libdir)/pkgconfig → pkgconfigdir=$(prefix)/share/pkgconfig
AP_LIB → AP_SRC
apertium_XXXdir=$(prefix)/lib/apertium/$(BASENAME)/ → apertium_XXXdir=$(prefix)/share/apertium/$(BASENAME)/

put share/pkgconfig in PKG_CONFIG_PATH in autogen.sh

--- a/Makefile.am
+++ b/Makefile.am
@@ -57,15 +57,15 @@ EXTRA_DIST=$(BASENAME).$(LANG1).dix \
 ## Installation stuff
 ###############################################################################
 #
-#   apertium_rus_libdir: This is where the compiled binaries go
+#   apertium_rus_dir: This is where the compiled binaries go
 #   apertium_rus_srcdir: This is where the source files go
 
-apertium_rusdir=$(prefix)/lib/apertium/$(BASENAME)/
+apertium_rusdir=$(prefix)/share/apertium/$(BASENAME)/
 apertium_rus_srcdir=$(prefix)/share/apertium/$(BASENAME)/
 
 apertium_rus_DATA=$(TARGETS_COMMON)
 
-pkgconfigdir = $(libdir)/pkgconfig
+pkgconfigdir = $(prefix)/share/pkgconfig
 pkgconfig_DATA = $(BASENAME).pc
 
 noinst_DATA=modes/$(LANG1)-morph.mode
