s/школьный<adj><sint>/школьный<adj>/; track only the diff between the previous expantion and current expantion of the rus.dix, not the full files; minor <sint> tag related fixes in tat-rus.dix

--- a/.gitattributes
+++ b/.gitattributes
@@ -38,8 +38,7 @@ dev/to_add.txt -text
 dev/to_check.txt -text
 dev/verbs-z.txt -text
 expanded/README -text
-expanded/current-state.txt.gz -text svneol=unset#unset
-expanded/previous-state.txt.gz -text svneol=unset#unset
+expanded/diff-previous-vs-current.txt -text
 /modes.xml -text
 /qa.sh -text
 /rus.prob -text
