--- a/.gitattributes
+++ b/.gitattributes
@@ -45,6 +45,8 @@ expanded/diff-previous-vs-current.txt -text
 /rus.prob -text
 scripts/evaluate-tagger.py -text
 test-scripts/rus.test -text
+texts/codein/aviapushka1.raw.txt -text svneol=unset#application/octet-stream
+texts/codein/aviapushka1.vislcg.txt -text
 texts/codein/kiev.orig.txt -text svneol=unset#application/octet-stream
 texts/codein/kiev.vislcg.txt -text
 texts/cyprus.ana.txt -text
