--- a/.gitattributes
+++ b/.gitattributes
@@ -48,6 +48,7 @@ test-scripts/rus.test -text
 texts/codein/aviapushka1.raw.txt -text svneol=unset#application/octet-stream
 texts/codein/aviapushka1.vislcg.txt -text
 texts/codein/kiev.orig.txt -text svneol=unset#application/octet-stream
+texts/codein/kiev.tagged.olexiy.txt -text
 texts/codein/kiev.vislcg.txt -text
 texts/codein/peresadku_serdce1.raw.txt -text svneol=unset#application/octet-stream
 texts/codein/peresadku_serdce1.vislcg.txt -text
