--- a/.gitattributes
+++ b/.gitattributes
@@ -54,6 +54,8 @@ texts/codein/peresadku_serdce1.raw.txt -text svneol=unset#application/octet-stre
 texts/codein/peresadku_serdce1.vislcg.txt -text
 texts/codein/sfera1.raw.txt -text svneol=unset#application/octet-stream
 texts/codein/sfera1.vislcg.txt -text
+texts/codein/zheleznaja_doroga1.raw.txt -text svneol=unset#application/octet-stream
+texts/codein/zheleznaja_doroga1.vislcg.txt -text
 texts/cyprus.ana.txt -text
 texts/cyprus.log.txt -text
 texts/dva-samoubijstva.ana.txt -text
