--- a/.gitattributes
+++ b/.gitattributes
@@ -47,6 +47,7 @@ scripts/evaluate-tagger.py -text
 test-scripts/rus.test -text
 texts/codein/aviapushka1.raw.txt -text svneol=unset#application/octet-stream
 texts/codein/aviapushka1.vislcg.txt -text
+texts/codein/iskusstvennyj_intellekt1.raw.txt -text svneol=unset#application/octet-stream
 texts/codein/kiev.orig.txt -text svneol=unset#application/octet-stream
 texts/codein/kiev.tagged.olexiy.txt -text
 texts/codein/kiev.vislcg.txt -text
