--- a/.gitattributes
+++ b/.gitattributes
@@ -49,9 +49,9 @@ texts/codein/aviapushka1.raw.txt -text svneol=unset#application/octet-stream
 texts/codein/aviapushka1.vislcg.txt -text
 texts/codein/iskusstvennyj_intellekt1.raw.txt -text svneol=unset#application/octet-stream
 texts/codein/iskusstvennyj_intellekt1.vislcg.txt -text
-texts/codein/kiev.orig.txt -text svneol=unset#application/octet-stream
-texts/codein/kiev.tagged.olexiy.txt -text
-texts/codein/kiev.vislcg.txt -text
+texts/codein/kiev1.raw.txt -text svneol=unset#application/octet-stream
+texts/codein/kiev1.tagged.olexiy.txt -text
+texts/codein/kiev1.vislcg.txt -text
 texts/codein/peresadku_serdce1.raw.txt -text svneol=unset#application/octet-stream
 texts/codein/peresadku_serdce1.vislcg.txt -text
 texts/codein/sfera1.raw.txt -text svneol=unset#application/octet-stream
