--- a/.gitattributes
+++ b/.gitattributes
@@ -57,6 +57,7 @@ texts/codein/peresadku_serdce1.vislcg.txt -text
 texts/codein/sfera1.raw.txt -text svneol=unset#application/octet-stream
 texts/codein/sfera1.vislcg.txt -text
 texts/codein/zheleznaja_doroga1.raw.txt -text svneol=unset#application/octet-stream
+texts/codein/zheleznaja_doroga1.tagged.stan98.txt -text
 texts/codein/zheleznaja_doroga1.vislcg.txt -text
 texts/cyprus.ana.txt -text
 texts/cyprus.log.txt -text
