--- a/.gitattributes
+++ b/.gitattributes
@@ -46,16 +46,17 @@ expanded/diff-previous-vs-current.txt -text
 scripts/evaluate-tagger.py -text
 test-scripts/rus.test -text
 texts/codein/aviapushka1.raw.txt -text svneol=unset#application/octet-stream
+texts/codein/aviapushka1.tagged.stan98.txt -text
 texts/codein/aviapushka1.vislcg.txt -text
 texts/codein/iskusstvennyj_intellekt1.raw.txt -text svneol=unset#application/octet-stream
-texts/codein/iskusstvennyj_intellekt1.vislcg.txt -text
+texts/codein/iskusstvennyj_intellekt1.tagged.stan98.txt -text
 texts/codein/kiev1.raw.txt -text svneol=unset#application/octet-stream
 texts/codein/kiev1.tagged.olexiy.txt -text
 texts/codein/kiev1.vislcg.txt -text
 texts/codein/peresadku_serdce1.raw.txt -text svneol=unset#application/octet-stream
 texts/codein/peresadku_serdce1.vislcg.txt -text
 texts/codein/sfera1.raw.txt -text svneol=unset#application/octet-stream
-texts/codein/sfera1.vislcg.txt -text
+texts/codein/sfera1.tagged.stan98.txt -text
 texts/codein/zheleznaja_doroga1.raw.txt -text svneol=unset#application/octet-stream
 texts/codein/zheleznaja_doroga1.tagged.stan98.txt -text
 texts/codein/zheleznaja_doroga1.vislcg.txt -text
