--- a/.gitattributes
+++ b/.gitattributes
@@ -59,6 +59,8 @@ texts/codein/peresadku_serdce1.raw.txt -text svneol=unset#application/octet-stre
 texts/codein/peresadku_serdce1.vislcg.txt -text
 texts/codein/sfera1.raw.txt -text svneol=unset#application/octet-stream
 texts/codein/sfera1.tagged.stan98.txt -text
+texts/codein/svjataja_inkvizicija1.raw.txt -text svneol=unset#application/octet-stream
+texts/codein/svjataja_inkvizicija1.vislcg.txt -text
 texts/codein/zheleznaja_doroga1.raw.txt -text svneol=unset#application/octet-stream
 texts/codein/zheleznaja_doroga1.tagged.stan98.txt -text
 texts/codein/zheleznaja_doroga1.vislcg.txt -text
