--- a/.gitattributes
+++ b/.gitattributes
@@ -56,6 +56,7 @@ texts/codein/iskusstvennyj_intellekt1.tagged.stan98.txt -text
 texts/codein/kiev1.raw.txt -text svneol=unset#application/octet-stream
 texts/codein/kiev1.tagged.olexiy.txt -text
 texts/codein/kiev1.tagged.stan98.txt -text
+texts/codein/kiev1.tagged.vladyslav.txt -text
 texts/codein/kiev1.vislcg.txt -text
 texts/codein/peresadku_serdce1.raw.txt -text svneol=unset#application/octet-stream
 texts/codein/peresadku_serdce1.vislcg.txt -text
