--- a/.gitattributes
+++ b/.gitattributes
@@ -71,6 +71,7 @@ texts/codein/uranus.raw.txt -text svneol=unset#application/octet-stream
 texts/codein/uranus.tagged.olexiy.txt -text
 texts/codein/uranus.vislcg.txt -text
 texts/codein/zheleznaja_doroga1.raw.txt -text svneol=unset#application/octet-stream
+texts/codein/zheleznaja_doroga1.tagged.olexiy.txt -text
 texts/codein/zheleznaja_doroga1.tagged.stan98.txt -text
 texts/codein/zheleznaja_doroga1.vislcg.txt -text
 texts/cyprus.ana.txt -text
