--- a/.gitattributes
+++ b/.gitattributes
@@ -53,6 +53,8 @@ texts/codein/aviapushka1.tagged.stan98.txt -text
 texts/codein/aviapushka1.vislcg.txt -text
 texts/codein/inkvizicija.raw.txt -text svneol=unset#application/octet-stream
 texts/codein/inkvizicija.vislcg.txt -text
+texts/codein/innovacija1.raw.txt -text svneol=unset#application/octet-stream
+texts/codein/innovacija1.vislcg.txt -text
 texts/codein/iskusstvennyj_intellekt1.raw.txt -text svneol=unset#application/octet-stream
 texts/codein/iskusstvennyj_intellekt1.tagged.stan98.txt -text
 texts/codein/kiev1.raw.txt -text svneol=unset#application/octet-stream
