--- a/.gitattributes
+++ b/.gitattributes
@@ -75,6 +75,8 @@ texts/codein/svjataja_inkvizicija1.vislcg.txt -text
 texts/codein/uranus.raw.txt -text svneol=unset#application/octet-stream
 texts/codein/uranus.tagged.olexiy.txt -text
 texts/codein/uranus.vislcg.txt -text
+texts/codein/vikingi1.raw.txt -text svneol=unset#application/octet-stream
+texts/codein/vikingi1.vislcg.txt -text
 texts/codein/zheleznaja_doroga1.raw.txt -text svneol=unset#application/octet-stream
 texts/codein/zheleznaja_doroga1.tagged.olexiy.txt -text
 texts/codein/zheleznaja_doroga1.tagged.stan98.txt -text
