--- a/.gitattributes
+++ b/.gitattributes
@@ -67,6 +67,10 @@ texts/codein/kiev1.vislcg.txt -text
 texts/codein/peresadku_serdce1.raw.txt -text svneol=unset#application/octet-stream
 texts/codein/peresadku_serdce1.tagged.olexiy.txt -text
 texts/codein/peresadku_serdce1.vislcg.txt -text
+texts/codein/rycar1.raw.txt -text svneol=unset#application/octet-stream
+texts/codein/rycar1.vislcg.txt -text
+texts/codein/rycar2.raw.txt -text svneol=unset#application/octet-stream
+texts/codein/rycar2.vislcg.txt -text
 texts/codein/sfera1.raw.txt -text svneol=unset#application/octet-stream
 texts/codein/sfera1.tagged.stan98.txt -text
 texts/codein/svjataja_inkvizicija1.raw.txt -text svneol=unset#application/octet-stream
