--- a/.gitattributes
+++ b/.gitattributes
@@ -67,9 +67,13 @@ texts/codein/kiev1.vislcg.txt -text
 texts/codein/peresadku_serdce1.raw.txt -text svneol=unset#application/octet-stream
 texts/codein/peresadku_serdce1.tagged.olexiy.txt -text
 texts/codein/peresadku_serdce1.vislcg.txt -text
+texts/codein/runes.raw.txt -text svneol=unset#application/octet-stream
+texts/codein/runes.vislcg.txt -text
 texts/codein/rycar1.raw.txt -text svneol=unset#application/octet-stream
+texts/codein/rycar1.tagged.stan98.txt -text
 texts/codein/rycar1.vislcg.txt -text
 texts/codein/rycar2.raw.txt -text svneol=unset#application/octet-stream
+texts/codein/rycar2.tagged.stan98.txt -text
 texts/codein/rycar2.vislcg.txt -text
 texts/codein/sfera1.raw.txt -text svneol=unset#application/octet-stream
 texts/codein/sfera1.tagged.stan98.txt -text
