--- a/.gitattributes
+++ b/.gitattributes
@@ -49,6 +49,8 @@ texts/codein/anglija1.raw.txt -text svneol=unset#application/octet-stream
 texts/codein/anglija1.tagged.olexiy.txt -text
 texts/codein/anglija1.tagged.stan98.txt -text
 texts/codein/anglija1.vislcg.txt -text
+texts/codein/athens.raw.txt -text svneol=unset#application/octet-stream
+texts/codein/athens.vislcg.txt -text
 texts/codein/aviapushka1.raw.txt -text svneol=unset#application/octet-stream
 texts/codein/aviapushka1.tagged.stan98.txt -text
 texts/codein/aviapushka1.vislcg.txt -text
