--- a/.gitattributes
+++ b/.gitattributes
@@ -50,7 +50,10 @@ texts/codein/anglija1.tagged.olexiy.txt -text
 texts/codein/anglija1.tagged.stan98.txt -text
 texts/codein/anglija1.vislcg.txt -text
 texts/codein/athens.raw.txt -text svneol=unset#application/octet-stream
+texts/codein/athens.tagged.stan98.txt -text
 texts/codein/athens.vislcg.txt -text
+texts/codein/athens2.txt -text svneol=unset#application/octet-stream
+texts/codein/athens2.vislcg.txt -text
 texts/codein/aviapushka1.raw.txt -text svneol=unset#application/octet-stream
 texts/codein/aviapushka1.tagged.stan98.txt -text
 texts/codein/aviapushka1.vislcg.txt -text
