--- a/.gitattributes
+++ b/.gitattributes
@@ -105,6 +105,7 @@ texts/murmansk.log.txt -text
 texts/murmansk.raw.txt -text svneol=unset#application/octet-stream
 texts/murmansk.tok.txt -text svneol=unset#application/octet-stream
 texts/rasskaz.raw.txt -text svneol=unset#application/octet-stream
+texts/rasskaz.tagged.spectie.txt -text
 texts/rasskaz.vislcg.txt -text
 texts/rwanda.ana.txt -text
 texts/rwanda.log.txt -text
