--- a/.gitattributes
+++ b/.gitattributes
@@ -30,6 +30,7 @@ dev/giellatekno/speling-autodix-adj.py -text
 dev/giellatekno/speling-autodix-n.py -text
 dev/giellatekno/speling-autodix-vblex.py -text
 dev/questions.txt -text
+dev/snjatnik_missing.txt -text
 dev/spellrelax.xsl -text
 dev/stem-list.txt -text svneol=unset#application/octet-stream
 dev/syn_sem_RUS.txt -text
