--- a/.gitattributes
+++ b/.gitattributes
@@ -44,8 +44,10 @@ expanded/diff-previous-vs-current.txt -text
 /modes.xml -text
 /qa.sh -text
 /rus.prob -text
+scripts/corpconv/analyse.py -text
 scripts/corpconv/cglib.py -text
 scripts/corpconv/rnc2cg.py -text
+scripts/corpconv/rnclib.py -text
 scripts/corpconv/rnctags.py -text
 scripts/evaluate-tagger.py -text
 test-scripts/rus.test -text
