--- a/.gitattributes
+++ b/.gitattributes
@@ -49,6 +49,10 @@ scripts/corpconv/cglib.py -text
 scripts/corpconv/rnc2cg.py -text
 scripts/corpconv/rnclib.py -text
 scripts/corpconv/rnctags.py -text
+scripts/corpconv/runtests.sh -text
+scripts/corpconv/tests.2015-08-01 -text
+scripts/corpconv/tests.2015-08-14 -text
+scripts/corpconv/tests.dat -text
 scripts/evaluate-tagger.py -text
 test-scripts/rus.test -text
 texts/codein/anglija1.raw.txt -text svneol=unset#application/octet-stream
