--- a/.gitattributes
+++ b/.gitattributes
@@ -46,7 +46,10 @@ expanded/diff-previous-vs-current.txt -text
 /rus.prob -text
 scripts/corpconv/analyse.py -text
 scripts/corpconv/cglib.py -text
-scripts/corpconv/rnc-gt-missing-lemmas.txt -text
+scripts/corpconv/rnc-gt-missing-ACRONYMS.txt -text svneol=unset#application/octet-stream
+scripts/corpconv/rnc-gt-missing-CAPITALS.txt -text svneol=unset#application/octet-stream
+scripts/corpconv/rnc-gt-missing-VERBS.txt -text svneol=unset#application/octet-stream
+scripts/corpconv/rnc-gt-missing-lemmas-NEW.txt -text svneol=unset#application/octet-stream
 scripts/corpconv/rnc2cg.py -text
 scripts/corpconv/rnclib.py -text
 scripts/corpconv/rnctags.py -text
