File for light disambiguation, Uliana.

--- a/.gitattributes
+++ b/.gitattributes
@@ -9,6 +9,7 @@
 /apertium-rus.post-rus.dix -text
 /apertium-rus.rus.acx -text
 /apertium-rus.rus.dix -text
+/apertium-rus.rus.multirlx -text
 /apertium-rus.rus.rlx -text
 /autogen.sh -text
 /configure.ac -text
