Update/add .gitignore and .gitattributes

--- a/.gitattributes
+++ b/.gitattributes
@@ -129,3 +129,8 @@ texts/rwanda.log.txt -text
 texts/son-smešnogo-čeloveka.ana.txt -text
 texts/son-smešnogo-čeloveka.log.txt -text
 texts/update-log.sh -text
+*.dix linguist-language=XML linguist-detectable=true
+*.lrx linguist-language=XML linguist-detectable=true
+*.lsx linguist-language=XML linguist-detectable=true
+*.tsx linguist-language=XML linguist-detectable=true
+*.t[[:digit:]]x linguist-language=XML linguist-detectable=true
